tela emprestimo ok

--- a/src/main/java/br/univates/apresentacao/TelaConsultaLivro.form
+++ b/src/main/java/br/univates/apresentacao/TelaConsultaLivro.form
@@ -165,7 +165,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jButtonFiltrar" min="-2" pref="96" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jButtonLimparFiltros" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -220,7 +220,7 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jButtonFiltrar" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jButtonLimparFiltros" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -336,12 +336,12 @@
         </Component>
         <Component class="br.univates.system32.components.JMyNumberField" name="jMyNumberFieldCodigo">
         </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="jButtonLimparFiltros">
           <Properties>
             <Property name="text" type="java.lang.String" value="Limpar filtros"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonLimparFiltrosActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
